--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <link rel="shortcut icon" href="assets/images/peliculas-logo-671x179.png" type="image/x-icon">
   <meta name="description" content="">
   <title>Home</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/mobirise-gallery/style.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -24,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-qrXLzxYvEx" once="menu" id="menu1-2" data-rv-view="8">
+<section class="menu cid-qrXLzxYvEx" once="menu" id="menu1-2" data-rv-view="78">
 
     
 
@@ -71,15 +72,30 @@
     </nav>
 </section>
 
+<section class="engine"><a href="https://mobirise.co/j">how to design a website for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-qrXP1mzabw" id="gallery3-a" data-rv-view="80">
 
-  <section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+    
+
+    <div>
+        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--pNaN video-slide" data-video-url="https://www.youtube.com/watch?v=FPKSSc1B57w" data-tags="Awesome"><div href="#lb-gallery3-a" data-slide-to="0" data-toggle="modal"><div></div><img alt="" src="assets/images/2017-7-5-0-30-36-368778.jpg"><span class="icon-video"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery3-a" data-slide-to="1" data-toggle="modal"><img src="assets/images/cars-1600x2400-800x1200.jpg" alt=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Creative"><div href="#lb-gallery3-a" data-slide-to="2" data-toggle="modal"><img src="assets/images/gallery02.jpg" alt=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Animated"><div href="#lb-gallery3-a" data-slide-to="3" data-toggle="modal"><img src="assets/images/gallery03.jpg" alt=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-a" data-slide-to="4" data-toggle="modal"><img src="assets/images/gallery04.jpg" alt=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-a" data-slide-to="5" data-toggle="modal"><img src="assets/images/gallery05.jpg" alt=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery3-a" data-slide-to="6" data-toggle="modal"><img src="assets/images/gallery06.jpg" alt=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Animated"><div href="#lb-gallery3-a" data-slide-to="7" data-toggle="modal"><img src="assets/images/gallery07.jpg" alt=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery3-a"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item active video-container"><img src="assets/images/327-2000x3000.jpg" alt=""></div><div class="carousel-item"><img src="assets/images/cars-1600x2400.jpg" alt=""></div><div class="carousel-item"><img src="assets/images/gallery02.jpg" alt=""></div><div class="carousel-item"><img src="assets/images/gallery03.jpg" alt=""></div><div class="carousel-item"><img src="assets/images/gallery04.jpg" alt=""></div><div class="carousel-item"><img src="assets/images/gallery05.jpg" alt=""></div><div class="carousel-item"><img src="assets/images/gallery06.jpg" alt=""></div><div class="carousel-item"><img src="assets/images/gallery07.jpg" alt=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery3-a"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery3-a"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+    </div>
+
+</section>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/masonry/masonry.pkgd.min.js"></script>
+  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/mobirise-gallery/player.min.js"></script>
+  <script src="assets/mobirise-gallery/script.js"></script>
   
   
   <input name="animation" type="hidden">
