create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qrXLzxYvEx" once="menu" id="menu1-p" data-rv-view="450">
+<section class="menu cid-qrXLzxYvEx" once="menu" id="menu1-p" data-rv-view="487">
 
     
 
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="carousel slide cid-qrXVOQ9Uky" data-interval="false" id="slider1-q" data-rv-view="452">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="carousel slide cid-qrXVOQ9Uky" data-interval="false" id="slider1-q" data-rv-view="489">
 
     
 
