--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qrXLzxYvEx" once="menu" id="menu1-2" data-rv-view="433">
+<section class="menu cid-qrXLzxYvEx" once="menu" id="menu1-2" data-rv-view="470">
 
     
 
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">free web page maker</a></section><section class="carousel slide cid-qrXQmdrPQh" data-interval="false" id="slider1-c" data-rv-view="435">
+<section class="engine"><a href="https://mobirise.co/l">bootstrap theme</a></section><section class="carousel slide cid-qrXQmdrPQh" data-interval="false" id="slider1-c" data-rv-view="472">
 
     
 
